--- a/rey.css
+++ b/rey.css
@@ -33,7 +33,7 @@ h1 {
     transition: background-color 0.3s;
 }
 
-.ruangs {
+.ruang {
     background-color: #ec993a;
     padding: 10px;
     text-align: center;
@@ -202,7 +202,7 @@ border: 4px solid #000000;
     z-index: 100;
 }
 
-.form-AditGay {
+.formcek {
     display: none;
     position: fixed;
     top: 50%;
@@ -216,10 +216,36 @@ border: 4px solid #000000;
     z-index: 100;
 }
 
-
 .form-container {
     display: flex;
     flex-direction: column;
+}
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
+    width: 300px;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
 }
 
 .form-container h2 {
@@ -247,30 +273,26 @@ border: 4px solid #000000;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    font-family: Arial, sans-serif;  /* Jenis font */
-    font-weight: bold;   /* Ketebalan font (normal, bold, lighter, dll.) */
-    
 }
-.btnC {
-    background-color: #aeae98;
-    color: rgba(255, 255, 255, 0.82);
+
+.btnpe {
+    background-color: #b1b8ae;
+    color: white;
     padding: 10px;
     margin-top: 15px;
-    border: 1px;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    font-family: Arial, sans-serif;  /* Jenis font */
-    font-weight: bold;   /* Ketebalan font (normal, bold, lighter, dll.) */
-    
 }
+
 .btn.cancel {
     background-color: #f44336;
-    font-family: Arial, sans-serif;  /* Jenis font */
-    font-weight: bold;   /* Ketebalan font (normal, bold, lighter, dll.) */
 }
 
-
+.btn:hover {
+    opacity: 0.8;
+}
 
 .daftar-pinjaman {
     margin-top: 20px;
@@ -284,3 +306,4 @@ border: 4px solid #000000;
 .cancel:hover {
     background-color: #e53935;
 }
+
